test/errhandling/parallel/coforall-calls-throwing-fn.good
coforall-calls-throwing-fn.chpl:6: In function 'badFn':
coforall-calls-throwing-fn.chpl:8: error: call to throwing function throwingFn without throws, try, or try! (relaxed mode)
coforall-calls-throwing-fn.chpl:5: note: throwing function throwingFn defined here
